--- a/10M SMA SPY.ipynb
+++ b/10M SMA SPY.ipynb
@@ -8,7 +8,7 @@
     "Robert Sloan <br>\n",
     "5/22/2019 <br>\n",
     "replicating Al's AAII CIMI 10M SMA SPY Market timer <br>\n",
-    "SPY/10M Simple Moving Average (SMA) above 1.0% go long below 1.0% go short<br>\n",
+    "SPY/10M Simple Moving Average (SMA) above 1 go long below 1 go short<br>\n",
     "TO DO<br>\n",
     "> Can excel spreadsheet be formatted including column width? \n"
    ]
