added current indicator to 10MSMA SPY

--- a/10M SMA SPY.ipynb
+++ b/10M SMA SPY.ipynb
@@ -294,7 +294,7 @@
     "# Set the day to 1 gives us the start of the month\n",
     "firstDay = lastDay.replace(day=1)\n",
     "lastDayOfMonthBeforeLast = spy_data.loc[firstDay:lastDay].last('1D').index # get the last market day last month\n",
-    "strLastDayOfMonthBeforeLast = spy_data.loc[firstDay:lastDay].last('1D').index[0].strftime('%Y-%m-%d') # get the last market day last month\n",
+    "strLastDayOfMonthBeforeLast = spy_data.loc[firstDay:lastDay].last('1D').index[0].strftime('%Y-%m-%d') # and month before last\n",
     "print(\"Last Market Day Month before last\", strLastDayOfMonthBeforeLast)"
    ]
   },
@@ -302,24 +302,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Calculate market indicator for last month and the month before"
+    "### Calculate current market indicator and for last month and the month before"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Current Indicator: LONG (4.11%)\n",
       "Last Months Indicator: LONG (7.17%)\n",
       "Month before lasts Indicator: LONG (3.73%)\n"
      ]
     }
    ],
    "source": [
+    "# current 10M SMA SPY\n",
+    "current_spy = float(spy_data[todays_date])\n",
+    "#print(\"endOfLastMonth_spy = \" + str(spy_data[lastDayOfLastMonth]))\n",
+    "current_spy_10m_sma = float(spy_10m_sma[todays_date])\n",
+    "#print(\"endOfLastMonth_spy_10m_sma = \" + str(spy_10m_sma[lastDayOfLastMonth]))\n",
+    "current_sma_spy = current_spy/endOfLastMonth_spy_10m_sma\n",
+    "current_percent_sma_spy = round(((current_spy/endOfLastMonth_spy_10m_sma)-1)*100,2)\n",
+    "if (current_sma_spy>1):\n",
+    "    status = 'LONG'\n",
+    "else:\n",
+    "    status = 'SHORT'\n",
+    "print(\"Current Indicator: \" + status + \" (\" + str(current_percent_sma_spy) + \"%)\")\n",
+    "\n",
     "# Last day of last month 10M SMA SPY\n",
     "endOfLastMonth_spy = float(spy_data[lastDayOfLastMonth].values)\n",
     "#print(\"endOfLastMonth_spy = \" + str(spy_data[lastDayOfLastMonth]))\n",
