updated comment format for Momentum Indicators file

--- a/Momentum Indicators.ipynb
+++ b/Momentum Indicators.ipynb
@@ -17,9 +17,9 @@
     "If SPY<BIL go to cash<br>\n",
     "<br>\n",
     "TODO <br>\n",
-    "> Find out why some areas of the graph are not boxed in green (SPY better) or red (BIL better)\n",
-    "> Choose timeframe for data capture (start_date).   Use date relative to start_date to truncate spy_data and bil_data.\n",
-    "> Calculate at the end of previous month and the end of the month before that."
+    "> Find out why some areas of the graph are not boxed in green (SPY better) or red (BIL better)<br>\n",
+    "> Choose timeframe for data capture (start_date).   Use date relative to start_date to truncate spy_data and bil_data.<br>\n",
+    "> Calculate at the end of previous month and the end of the month before that.<br>"
    ]
   },
   {
