updated comments with assumptions

--- a/10M SMA SPY.ipynb
+++ b/10M SMA SPY.ipynb
@@ -6,9 +6,10 @@
    "source": [
     "# 10M SMA SPY\n",
     "Robert Sloan <br>\n",
-    "5/22/2019 <br>\n",
-    "replicating Al's AAII CIMI 10M SMA SPY Market timer <br>\n",
+    "5/23/2019 <br>\n",
+    "replicating Al Zmyslowski's AAII CIMI 10M SMA SPY Market timer <br>\n",
     "SPY/10M Simple Moving Average (SMA) above 1 go long below 1 go short<br>\n",
+    "Using Yahoo Adjusted Close for SPY in calculations.<br>\n",
     "TO DO<br>\n",
     "> Can excel spreadsheet be formatted including column width? \n"
    ]
