--- a/Death Golden Cross SPY.ipynb
+++ b/Death Golden Cross SPY.ipynb
@@ -6,9 +6,10 @@
    "source": [
     "#  Death/Golden Cross SPY\n",
     "Robert Sloan <br>\n",
-    "5/16/2019 <br>\n",
-    "Replicating Al's AAII CIMI Market Review - Technical & Economic Indicators<br>\n",
+    "5/23/2019 <br>\n",
+    "Replicating Al Zmyslowski's AAII CIMI Market Review - Technical & Economic Indicators<br>\n",
     "Death/Golden Cross SPDR S&P 500 ETF (SPY)<br>\n",
+    "Using Yahoo Adjusted Close for SPY in calculations.<br>\n",
     "This measures the 50 day simple moving average (SMA) vs the 200 day SMA on the SPY.<br>\n",
     "If the 50 day is above the 200 day SMA conditions are bullish; if below the 200 day conditions are bearish.<br>\n"
    ]
