--- a/Momentum Indicators.ipynb
+++ b/Momentum Indicators.ipynb
@@ -7,8 +7,9 @@
     "##  Momentum Indicators\n",
     "### 5M Gain, 12M Gain and FundX Score Indicators\n",
     "Robert Sloan <br>\n",
-    "5/22/2019 <br>\n",
-    "Replicating Al's AAII CIMI Market Review - Technical & Economic Indicators<br>\n",
+    "5/23/2019 <br>\n",
+    "Replicating Al Zmyslowski's AAII CIMI Market Review - Technical & Economic Indicators<br>\n",
+    "Using Yahoo Adjusted Close for SPY and BIL in calculations.\n",
     "\n",
     "For 5M gain Compare 5 month gain of SPY vs. BIL<br>\n",
     "For 12M gain Compare 12 month gain of SPY vs. BIL <br>\n",
